--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
+    "@mantine/core": "^7.5.3",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "next": "^14.1.0",
