--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/cli": "^12.10.1",
     "@emailjs/browser": "^4.1.0",
     "@mantine/core": "^7.5.3",
     "clsx": "^2.1.0",
