--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@mantine/core": "^7.5.3",
+    "@tabler/icons-react": "^3.2.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "next": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
