sanity added with new blog post. PLease work

--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@mantine/core": "^7.5.3",
+    "@portabletext/react": "^3.0.18",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.38.0",
     "@tabler/icons-react": "^3.2.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "next": "^14.2.1",
+    "next-sanity": "^7.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "sanity": "^3.38.0",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
