--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@mantine/core": "^7.5.3",
+    "@mantine/form": "^7.9.1",
     "@portabletext/react": "^3.0.18",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.38.0",
