--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,23 @@
 {
     "rewrites": [
         {"source" : "/(.*)", "destination": "/"}
+    ],
+    "routes": [
+        {
+            "src": "/",
+            "dest": "/"
+        },
+        {
+            "src": "/free-guide",
+            "dest": "/"
+        },
+        {
+            "src": "/free-guide/thank-you",
+            "dest": "/"
+        },
+        {
+            "src": "/application/thank-you",
+            "dest": "/"
+        }
     ]
 }
