--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-icons": "^5.0.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.1",
     "sanity": "^3.38.0",
     "styled-components": "^6.1.8",
