--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.2.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.1",
     "next-sanity": "^7.1.4",
     "react": "^18.2.0",
@@ -29,7 +30,7 @@
     "react-router-dom": "^6.22.1",
     "sanity": "^3.38.0",
     "styled-components": "^6.1.8",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
